--- a/carga.html
+++ b/carga.html
@@ -81,7 +81,7 @@
 							
 							$.each(result, function( index, dato ) {
 								if(dato.estatus="transfered"){
-								("#resultado").append("dato:"+dato);
+								$("#resultado").append("dato:"+dato);
 									$("#resultado").append("Encuesta "+dato.idsqlite+" - Estado: Transferido");
 								}else{
 									$("#resultado").append("Encuesta "+dato.idsqlite+" - Estado: Local");
