--- a/carga.html
+++ b/carga.html
@@ -79,9 +79,9 @@
 							$("#resultado").html("Total: "+total+"<br><br>"+JSON.stringify(result));
 							
 							
+								$("#resultado").append("dato:"+JSON.parse(result));
 							$.each(result, function( index, dato ) {
 								if(dato.estatus="transfered"){
-								$("#resultado").append("dato:"+dato);
 									$("#resultado").append("Encuesta "+dato.idsqlite+" - Estado: Transferido");
 								}else{
 									$("#resultado").append("Encuesta "+dato.idsqlite+" - Estado: Local");
