--- a/carga.html
+++ b/carga.html
@@ -161,7 +161,7 @@
 						var total=res.rows[0].conteo;
 						sqlite.query('Select * from EstudiosJojutla where estatus=?', ["registered"], function(err, result) {
 						  if (err) throw err;
-							alert("ok con la extraccion de bd");
+							//alert("ok con la extraccion de bd");
 					$.each(result.rows, function( index, registro ) {
 			  //alert("registro="+registro.idsqlite);
 							
@@ -201,8 +201,8 @@
 												
 											},
 											error: function(json) {
-												$("#resultado").html("Error: "+json);
-												alert("hubo un error"+json);
+												$("#resultado").html("Error: "+JSON.stringify(json));
+												alert("hubo un error"+JSON.stringify(json));
 										}
 										});
 	  
