--- a/carga.html
+++ b/carga.html
@@ -190,7 +190,7 @@
 																
 															});
 														});
-													//	$("#resultado").append("ok local "+json.datos.sqlite+"="+json.datos.id);
+														$("#resultado").append("ok local "+json.datos);
 													navigator.notification.alert('Datos almacenados correctamente', "", 'Información', 'OK');
 													
 												}else{
