--- a/index.html
+++ b/index.html
@@ -1932,7 +1932,7 @@ $("#mismopartido").slider({
 			var propuesta10=$("input[name='propuesta10']:checked").val();
 			var propuestaImportante10=$("input[name='propuestaImportante10']:checked").val();
 			var propuesta11=$("input[name='propuesta11']:checked").val();
-			var propuestaImportante11=$("input[name='']:checked").val();
+			var propuestaImportante11=$("input[name='propuestaImportante11']:checked").val();
 			var propuesta12=$("input[name='propuesta12']:checked").val();
 			var propuestaImportante12=$("input[name='propuestaImportante12']:checked").val();
 			var cumpliralcalde=$("input[name='cumpliralcalde']:checked").val();
