--- a/index.html
+++ b/index.html
@@ -1788,7 +1788,7 @@
 													</div>
 												</div>
 												
-												<div id="spinner" class="col-md-3 hidden" style="z-index: 1000;">
+												<div id="spinner" class="text-center col-md-3 hidden" style="z-index: 1000;">
 							<div class="three-quarters-loader text-center" >
 							  Guardando
 							</div>
